# Adaptive-Change-Harness

./: .gitignore  AGENTS.md  Makefile  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: dependencies.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: codebases.py  failure_cases.py  health.py  providers.py  runs.py  skills.py
apps/api/app/core/: config.py
apps/api/app/evaluators/: engine.py
apps/api/app/models/: schemas.py
apps/api/app/providers/: base.py  fake_provider.py  openai_provider.py  registry.py
apps/api/app/services/: break_engine.py  codebase_intake.py  discovery_engine.py  orchestrator.py  patcher.py  probe_runner.py  prompts.py  repo_profiler.py  shell.py  skill_library.py  workspace.py
apps/api/app/storage/: repository.py
apps/api/tests/: test_health.py  test_v2_foundation.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.tsx
apps/web/src/app/: App.test.tsx  App.tsx
apps/web/src/features/codebases/: RepoProfilePanel.tsx
apps/web/src/features/discovery/: DiscoveryConsole.test.tsx  (+1 more)
apps/web/src/lib/: api.ts  types.ts
apps/web/src/styles/: index.css
demo-repo/checks/: check_contract.py  check_invariants.py
demo-repo/src/: api_contract.py  checkout_service.py  persistence.py  pricing.py
demo-repo/tests/: test_checkout.py  test_pricing.py
docs/: conventions.md  executable-plan.md  operator-checklist.md  runtime-flow.md  v2-implementation-plan.md
skill_assets/: README.md
skills/project-skill-finder/: SKILL.md
skills/project-skill-finder/agents/: openai.yaml
(+6 files in other folders)
